# math_rs

./: .gitignore  Cargo.toml  README.md  result.txt
big_num/: Cargo.toml  README.md
big_num/src/: big_int.rs  big_num_cache.rs  big_num_constants.rs  lib.rs
src/: lib.rs
src/expr/: mod.rs
src/expr/parser/: ast.rs  parser.rs
src/expr/tokenizer/: dfa.rs  mod.rs  nfa.rs  tokenizer.rs
src/parser/: parser.rs
src/tokenizer/: dfa.rs  mod.rs  nfa.rs  token.rs  tokenizer.rs
